[gd_scene load_steps=9 format=2]

[ext_resource path="res://codigo/telas/single/single.gd" type="Script" id=1]
[ext_resource path="res://img/tela_nova_single.png" type="Texture" id=2]
[ext_resource path="res://img/figadu.png" type="Texture" id=3]
[ext_resource path="res://img/figadu_2.png" type="Texture" id=4]
[ext_resource path="res://img/boca_1.png" type="Texture" id=5]
[ext_resource path="res://img/boca_2.png" type="Texture" id=6]
[ext_resource path="res://img/voltar_2.png" type="Texture" id=7]
[ext_resource path="res://img/voltar.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="figado" type="TextureButton" parent="."]
visible = false
margin_left = 115.361
margin_top = 191.067
margin_right = 526.361
margin_bottom = 307.067
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="boca" type="TextureButton" parent="."]
margin_left = 627.276
margin_top = 68.4957
margin_right = 1259.28
margin_bottom = 165.496
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="voltar" type="TextureButton" parent="."]
margin_left = 778.687
margin_top = 641.696
margin_right = 1236.69
margin_bottom = 735.696
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
[connection signal="pressed" from="figado" to="." method="_on_figado_pressed"]
[connection signal="pressed" from="boca" to="." method="_on_boca_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
